Update testing guidance for Minau v02 registered record cases